<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>

    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_mail">annakiritseva@yandex.ru</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_uri">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="net_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_time">"00:00"</string>

    <string name="liked_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="hint_name">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creation">Завершить создание плейлиста?</string>
    <string name="finish_creation_desc">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">"Плейлист %1$s создан"</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="added_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    
    <plurals name="tracks_plurals">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="no_tracks_in_playlist">В плейлисте нет ни одного трека</string>

    <plurals name="minutes_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="delete_track">Удалить трек</string>
    <string name="you_sure_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>