<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="14dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back"
            android:contentDescription="backButton"
            style="@style/ImageButtonStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PageTitleStyle"
            android:layout_marginTop="4dp"
            android:text="@string/settings"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="@string/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SwitcherStyle"
            />

        <Button
            android:text="@string/share_app"
            android:id="@+id/shareButton"
            android:paddingStart="0dp"
            app:icon="@drawable/share"
            style="@style/SettingsButtonStyle"
            />

        <Button
            android:text="@string/write_support"
            android:id="@+id/supportButton"
            app:icon="@drawable/support"
            android:paddingStart="0dp"
            style="@style/SettingsButtonStyle"
            />

        <Button
            android:text="@string/user_agreement"
            android:id="@+id/agreementButton"
            app:icon="@drawable/right_arrow"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            style="@style/SettingsButtonStyle"
            />
    </LinearLayout>

</LinearLayout>