<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text_size"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius"
            />

        <Button
            android:id="@+id/mediaButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text_size"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius"/>

        <Button
            android:id="@+id/settingButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text_size"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius"/>


    </LinearLayout>

</FrameLayout>