<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/medium_margin"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.media.playlists.new_playlist.fragment.NewPlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back"
            android:contentDescription="backButton"
            style="@style/ImageButtonStyle"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="-12dp"/>

        <TextView
            style="@style/PageTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/new_playlist" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/photoPickupLL"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        app:cornerRadius="8dp"
        android:background="@drawable/add_photo_bg">

        <ImageView
            android:id="@+id/placeholderIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add_photo"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditText"
        style="@style/TextInputLayout"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallTextViewStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descEditText"
        style="@style/TextInputLayout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallTextViewStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/createPlaylistButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/medium_margin"
        android:backgroundTint="@color/create_button_color"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:textAppearance="@font/ys_display_medium"
        android:textFontWeight="500"
        app:cornerRadius="8dp"
        android:text="@string/create"
        android:enabled="false"/>
</LinearLayout>